# harmonix

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
examples/: 01_analytic_fc_and_working_point.py  02_hopf_simulation_fcd_bold.py  03_evolutionary_heatmap_panel.py  04_surface_eigenmodes.py
src/harmonix/: __init__.py  _logging.py  api.py  config.py
src/harmonix/backends/: __init__.py  base.py  cupy_backend.py  jax_backend.py  memory.py  numpy_backend.py  parallel.py  rng.py  torch_backend.py
src/harmonix/bases/: __init__.py  _meshes.py  connectome.py  geometric.py  graph_laplacian.py  modal_basis.py
src/harmonix/criticality/: __init__.py  diagnostics.py  spectral.py  working_point.py
src/harmonix/datasets/: __init__.py
src/harmonix/metrics/: __init__.py  fc.py  fcd.py  modal.py  phase.py
src/harmonix/models/: __init__.py  base.py  hopf_modal.py  linear_wave.py  ou_modal.py
src/harmonix/simulate/: __init__.py  hemodynamic.py  integrators.py  result.py  simulator.py  sweep.py
src/harmonix/viz/: __init__.py  _style.py  criticality.py  matrices.py  metrics_panels.py  surface3d.py  timeseries.py
tests/: conftest.py  test_backends.py  test_bases.py  test_criticality.py  test_metrics.py  test_models.py  test_simulate.py  test_viz.py
